RESOLVED FIXED286663
Crash under WTF::Detail::CallableWrapper<WebCore::AudioSessionMac::handleDefaultDeviceChange>
https://bugs.webkit.org/show_bug.cgi?id=286663
Summary Crash under WTF::Detail::CallableWrapper<WebCore::AudioSessionMac::handleDefa...
Chris Dumez
Reported 2025-01-28 20:33:46 PST
Crash under WTF::Detail::CallableWrapper<WebCore::AudioSessionMac::handleDefaultDeviceChange>.
Attachments
Chris Dumez
Comment 1 2025-01-28 20:33:56 PST
Chris Dumez
Comment 2 2025-01-28 20:39:12 PST
EWS
Comment 3 2025-01-29 08:52:54 PST
Committed 289502@main (4932734fe370): <https://commits.webkit.org/289502@main> Reviewed commits have been landed. Closing PR #39672 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.