Crash under WTF::Detail::CallableWrapper<WebCore::AudioSessionMac::handleDefaultDeviceChange> https://bugs.webkit.org/show_bug.cgi?id=286663 rdar://143505451

Reviewed by Jer Noble.

AudioSessionMac was calling `callOnMainThread()` in several places and capturing a raw pointer
to the session. That pointer may no longer be valid once the lambda runs asynchronously.

To address the issue, use AudioObjectAddPropertyListenerBlock() instead of AudioObjectAddPropertyListener()
so we can pass a block capturing a ThreadSafeWeakPtr to the session and so that we can request it be
dispatched to the main queue.

* Source/WebCore/platform/audio/AudioSession.h:
* Source/WebCore/platform/audio/mac/AudioSessionMac.h:
* Source/WebCore/platform/audio/mac/AudioSessionMac.mm:
(WebCore::AudioSessionMac::removePropertyListenersForDefaultDevice const):
(WebCore::AudioSessionMac::handleDefaultDeviceChange):
(WebCore::AudioSessionMac::addDefaultDeviceObserverIfNeeded const):
(WebCore::AudioSessionMac::addSampleRateObserverIfNeeded const):
(WebCore::AudioSessionMac::addBufferSizeObserverIfNeeded const):
(WebCore::AudioSessionMac::addMuteChangeObserverIfNeeded const):
(WebCore::AudioSessionMac::removeMuteChangeObserverIfNeeded const):
(WebCore::AudioSessionMac::handleSampleRateChange): Deleted.
(WebCore::AudioSessionMac::handleBufferSizeChange): Deleted.
(WebCore::handleMutePropertyChange): Deleted.
* Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.h:

Canonical link: https://commits.webkit.org/289502@main