Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.h
@@ -46,8 +46,7 @@ class RemoteAudioSession final
     : public WebCore::AudioSession
     , public WebCore::AudioSessionInterruptionObserver
     , public GPUProcessConnection::Client
-    , IPC::MessageReceiver
-    , public ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<RemoteAudioSession> {
+    , IPC::MessageReceiver {
     WTF_MAKE_TZONE_ALLOCATED(RemoteAudioSession);
 public:
     static Ref<RemoteAudioSession> create();
